# YOLOX-android

./: .gitignore  README.md
android/app/src/main/java/com/megvii/yoloXncnn/: MainActivity.java  YOLOXncnn.java
android/app/src/main/jni/: CMakeLists.txt  yoloXncnn_jni.cpp
